compiler/tests/fail/arm-m4/intrinsic_bfcS.jazz
export
fn bfc(reg u32 x) -> reg u32 {
    ?{}, x = #BFCS(x, 0, 1);
    return x;
}
